--- a/book/dt.tex
+++ b/book/dt.tex
@@ -501,7 +501,7 @@ data, we need to \concept{induce} a function $f$ that maps new inputs
 $\hat \vx$ to corresponding prediction $\hat y$.  The key property
 that $f$ should obey is that it should do well (as measured by $\ell$)
 on future examples that are \emph{also} drawn from $\cD$.  Formally,
-it's \concept{expected loss} $\ep$ over $\cD$ with repsect to $\ell$
+its \concept{expected loss} $\ep$ over $\cD$ with repsect to $\ell$
 should be as small as possible:
 \begin{align} \label{eq:expectederror}
 \ep
