--- a/book/em.tex
+++ b/book/em.tex
@@ -154,7 +154,7 @@ In particular, we will compute $s_n$ by maximizing its likelihood under the \emp
 If we are going to compute expectations of $t$, we have to say: expectations according to which probability distribution?
 We will use the distribution $p(t_m \| \vec a, \vec s)$.
 Let $\tilde t_m$ denote $\Ep_{t_m \sim p(t_m \| \vec a, \vec s)}[t_m]$.
-Because $t_m$ is a binary variable, its expectation is equal to it's probability;
+Because $t_m$ is a binary variable, its expectation is equal to its probability;
 namely: $\tilde t_m = p(t_m \| \vec a, \vec s)$.
 
 How can we compute this?
@@ -263,7 +263,7 @@ to one), to denote a fractional assignment of examples to clusters.
 
 This notion of soft-assignments is visualized in
 Figure~\ref{fig:em:piecharts}.  Here, we've depicted each example as a
-pie chart, and it's coloring denotes the degree to which it's been
+pie chart, and its coloring denotes the degree to which it's been
 assigned to each (of three) clusters.  The size of the pie pieces
 correspond to the $\vec z_n$ values.
 
