--- a/book/formal.tex
+++ b/book/formal.tex
@@ -87,7 +87,7 @@ figure out ways of learning the mapping from $x$ to $y$ given only access to a t
 % The most direct way that you can attempt to construct such a
 % probability distribution is to select a \emph{family} of parametric
 % distributions.  For instance, a Gaussian (or Normal) distribution is
-% parametric: it's parameters are its mean and covariance.  The job of
+% parametric: its parameters are its mean and covariance.  The job of
 % learning is then to infer which parameters are ``best'' as far as the
 % observed training data is concerned, as well as whatever inductive
 % bias you bring.  A key assumption that you will need to make is that
@@ -283,7 +283,7 @@ notice that if you simply queried on a \emph{single} feature for this
 data, you would be able to get very low training error, but wouldn't
 be forced to ``guess'' randomly.
 
-\thinkaboutit{Which feature is it, and what is it's training error?}
+\thinkaboutit{Which feature is it, and what is its training error?}
 
 This example illustrates the key concepts of \concept{underfitting}
 and \concept{overfitting}.  Underfitting is when you had the
@@ -387,7 +387,7 @@ algorithm hasn't seen it.  But you have.  And you are likely a better
 learner than your learning algorithm.  Consciously or otherwise, you
 might make decisions based on whatever you might have seen.  Once you
 look at the test data, your model's performance on it is no longer
-indicative of it's performance on future unseen data.  This is simply
+indicative of its performance on future unseen data.  This is simply
 because future data is unseen, but your ``test'' data no longer is.
 
 \section{Models, Parameters and Hyperparameters}
